erDiagram
  users_data ||--o| users_login : credenciales
  users_data ||--o{ citas : reserva
  users_data ||--o{ noticias : publica
  users_data ||--o{ consejos : escribe

  users_data {
    int idUser PK
    string email
    string nombre
  }
  users_login {
    int idLogin PK
    int idUser FK
    string usuario
    string rol
  }
  citas {
    int idCita PK
    int idUser FK
    date fecha_cita
    time hora_cita
  }
  noticias {
    int idNoticia PK
    int idUser FK
    string titulo
  }
  consejos {
    int idConsejo PK
    int idUser FK
    string titulo
  }
